5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4377/executions/1596_1571.log
== SUBMITION (2019-03-26 18:22:26) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
letras=input("digite o numero")
print(letras.upper())
-- EXECUTION TIME:
0.175337
-- TEST CASE 1:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
PRIMEIRO_CASO_DE_TESTE
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 20:32:55) 
-- CODE:
input("odeio programacao")
print(odeioprogramacao.upper())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(odeioprogramacao.upper())
NameError: name 'odeioprogramacao' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 20:33:42) 
-- CODE:
input("odeio programacao")
print(odeioprogramacao.upper())
-- EXECUTION TIME:
0.186672
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/1571/main.py", line 2, in <module>
    print(odeioprogramacao.upper())
NameError: name 'odeioprogramacao' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 20:34:07) 
-- CODE:
input("odeio programacao")
texto=odeioprogramacao
print(texto.upper())
-- EXECUTION TIME:
0.131697
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/1571/main.py", line 2, in <module>
    texto=odeioprogramacao
NameError: name 'odeioprogramacao' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 20:34:08) 
-- CODE:
input("odeio programacao")
texto=odeioprogramacao
print(texto.upper())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    texto=odeioprogramacao
NameError: name 'odeioprogramacao' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 20:34:40) 
-- CODE:
input("odeio programacao")
texto=odeioprogramacao
print(texto.upper())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    texto=odeioprogramacao
NameError: name 'odeioprogramacao' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 20:34:53) 
-- CODE:
texto=input("odeio programacao")
print(texto.upper())
-- OUTPUT:
PRIMEIRO_CASO_DE_TESTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 20:34:58) 
-- CODE:
texto=input("odeio programacao")
print(texto.upper())
-- EXECUTION TIME:
0.167669
-- TEST CASE 1:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
PRIMEIRO_CASO_DE_TESTE
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
